--- a/.gitignore
+++ b/.gitignore
@@ -257,4 +257,9 @@ paket-files/
 # Coverage Report
 MyProject_coverage.xml
 
+# Specific to the project
+Vector2.cpp
+Vector3.cpp
+compiledVector2
+compiledVector3
 .DS_Store
